blocks/header/header.css
.header {
  z-index: 4;
  position: relative;
}

.meganav-bg {
  background-color: #FFFFFF;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 3;
}

.body-locked {
  overflow: hidden;
  height: 100%;
  width: 100%;
  position: fixed;
}

#nav {
  height: var(--nav-height);
  gap: 0 15px;
  display: grid;
  position: relative;
  grid-template-columns: 1px 145px auto 25px 1px;
  grid-template-rows: 7px auto 7px auto auto 20px;
}

.header-wrapper .hidden,
#nav .hidden {
  display: none !important;
}

#nav button,
#nav a {
  -webkit-tap-highlight-color: transparent;
}

#nav .nav-brand {
  margin: auto 0;
  grid-row: 2/3;
  grid-column: 2/3;
}

#nav .nav-brand p {
  margin: auto 0;
  line-height: 13px;
}

#nav .nav-tools-mobile {
  grid-row: 4/5;
  grid-column: 1/6;
  padding: 16px 10px;
  position: relative;
  z-index: 2;
  background-color: #FFFFFF;
}

#nav .nav-login,
#nav .user-btn {
  margin: auto 0 auto auto;
  grid-row: 2/3;
  grid-column: 3/4;
}

#nav .nav-hamburger,
#nav .nav-close {
  grid-row: 2/3;
  grid-column: 4/5;
  margin: auto 0;
}

#nav .nav-meganav {
  grid-row: 5/6;
  grid-column: 1/6;
  z-index: 2;
  background-color: #FFFFFF;
}

#nav .nav-brand .icon-logo {
  height: 31px;
  width: 145px;
}

#nav .search-input {
  width: 100%;
  height: 48px;
  border-radius: 360px;
  padding-left: 16px;
}

#nav .header-wrapper.search-input::placeholder {
  color: #909090;
  font-size: 16px;
  line-height: 20px;
}

#nav .search-btn {
  background: transparent;
  padding: 0;
  margin: 0;
  border: 0;
  position: absolute;
  right: 33px;
  top: 50%;
  transform: translateY(-50%);
  border-radius: 0;
}

#nav .nav-login ul {
  display: none;
}

#nav .login-btn {
  background-color: #C74D2F;
  margin: 0;
  padding: 13px 24px;
}

#nav .user-btn {
  background-color: transparent;
  border: 0;
  border-radius: 0;
  padding: 0;
  margin: 11px 0;
}

#nav .user-btn img {
  width: 40px;
  height: 40px;
  aspect-ratio: auto 40 / 40;
}

#nav .nav-meganav li {
  list-style-type: none;
  padding-left: 0;
  margin-bottom: 0;
}

#nav .nav-meganav ul {
  padding-left: 0;
}

#nav .nav-meganav > ul > li {
  border-bottom: 1px solid #000000;
}

#nav .nav-meganav .pet-topic {
  display: flex;
  margin-bottom: 0;
}

#nav .nav-meganav .pet-topic-info {
  margin-left: 12px;
}

#nav .nav-meganav .pet-topic-title {
  display: block;
  margin-bottom: 8px;
}

#nav .menu-item {
  box-sizing: border-box;
  display: block;
  color: #000000;
  font-family: "Libre Franklin";
  font-size: 18px;
  line-height: 22px;
  padding: 24px;
  border-bottom: 1px solid #000000;
  background-color: transparent;
  border-radius: 0;
  width: 100%;
  text-decoration: none;
  font-weight: 500;
  text-align: left;
}

#nav button.menu-item {
  border: 0;
  border-bottom: 1px solid #000000;
}

#nav .menu-item:last-of-type {
  border: 0;
}

#nav .collapsible {
  margin: 0;
}

#nav .collapsible::after {
  content: '\2303';
  font-size: 20px;
  color: #000000;
  float: right;
  transform: rotate(180deg) translateY(6px);
}

#nav .collapsible.active {
  background-color: #3C0040;
  color: #FFFFFF;
}

#nav .collapsible.active:after {
  transform: none;
  color: #FFFFFF;
}

#nav .content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  font-family: Raleway, sans-serif;
}

#nav .content li {
  padding: 12px 16px;
  display: flex;
}

#nav .content li:first-of-type {
  padding-top: 16px;
}

#nav .content li:last-of-type {
  padding-bottom: 24px;
}

#nav .content li div:first-child {
  margin-right: 12px;
}

#nav .content a {
  color: #000000;
  text-decoration: none;
  font-weight: 600;
  font-size: 16px;
  line-height: 19px;
  margin-bottom: 8px;
}

#nav .content p {
  color: #8A8A8A;
  font-size: 12px;
  line-height: 14px;
}

#nav .nav-hamburger button,
#nav .nav-close button,
#nav .nav-language-selector button {
  background-color: transparent;
  border: 0;
  border-radius: 0;
  padding: 0;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.nav-language-selector-desktop {
  grid-row: 6/7;
  grid-column: 1/6;
  z-index: 3;
  margin: 32px auto 0;
}

#nav .account-options {
  display: flex;
  flex-direction: column;
  background-color: #FFFFFF;
  border-radius: 0 0 10px 10px;
  border: 1px solid #E4E4EB;
  box-shadow: 0px 34px 21px 0px #0000000D;
  position: absolute;
  left: 0;
  width: 100%;
  top: 100%;
  z-index: 3;
}

#nav .account-btn,
#nav .sign-out-btn {
  background-color: transparent;
  border: 0;
  border-radius: 0;
  color: #000000;
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  text-align: left;
  padding: 14px 24px;
  margin: 0;
  text-decoration: none;
  font-family: "Libre Franklin";
}

#nav .account-btn {
  border-bottom: 1px solid #E4E4EB;
}

#nav .nav-featured-article {
  display: none;
}

#nav .nav-language-selector {
  grid-row: 6/6;
  grid-column: 1/6;
  margin: 32px auto auto;
}

#nav .nav-language-selector button::after {
  display: flex;
  content: '\2303';
  font-size: 18px;
  color: #000000;
  float: right;
  transform: rotate(180deg) translateY(3px);
  margin-left: 8px;
}

#nav .nav-language-selector button[popovertarget],
#nav .nav-language-selector button[aria-haspopup] {
  font-size: 1.5rem;
  margin: 0;
  padding: 0;
  background: inherit;
  border: none;
  border-radius: 0;
  line-height: 1rem;
}

#nav .nav-language-selector [popover],
#nav .nav-language-selector button[aria-haspopup] + [aria-hidden] {
  position: absolute;
  inset: 0;
  top: 16px;
  gap: .5rem;
  z-index: 999;
  padding: 8px 48px 8px 24px;
  background-color: var(--background-color);
  border: 1px solid #E4E4EB;
  border-radius: 8px;
  font-size: 1.5rem;
}

#nav .nav-language-selector [popover]:popover-open,
#nav .nav-language-selector [aria-hidden="false"] {
  display: flex;
}

#nav .nav-language-selector button.active::after {
  transform: rotate(0deg) translateY(3px);
}

#nav .nav-language-selector [popover] a,
#nav .nav-language-selector button[aria-haspopup] + [aria-hidden] a {
  line-height: 1.3rem;
  text-decoration: none;
  display: flex;
  align-items: center;
  color: #000000;
}

#nav .nav-language-selector .region-name {
  font-size: 16px;
  line-height: 20px;
  font-weight: 500;
  margin-left: 8px;
  color: #000000;
  font-family: "Libre Franklin";
}

@media (min-width: 768px) {
  #nav .nav-login,
  #nav .user-btn {
    margin-left: auto;
  }

  #nav .nav-login {
    grid-column: 3/4;
  }
}

@media (min-width: 1024px) {
  #nav {
    gap: 0 24px;
    grid-template-rows: 8px 72px 8px 67px;
    grid-template-columns: 16px 197px auto 340px fit-content(10px) 60px 16px;
  }

  #nav .nav-brand {
    padding: 0;
    grid-row: 2/3;
    grid-column: 2/3;
  }

  #nav .nav-brand p {
    margin: 0;
  }

  #nav .nav-brand .icon-logo {
    height: 42px;
    width: 197px;
  }

  #nav .nav-tools {
    max-width: 340px;
    height: 48px;
    position: relative;
    margin: auto 0;
    grid-column: 4/5;
    grid-row: 2/3;
  }

  #nav .nav-login {
    grid-row: 2/3;
    grid-column: 5/6;
  }

  #nav .login-btn {
    margin: 0;
  }

  #nav .user-btn {
    grid-row: 2/3;
    grid-column: 5/6;
    height: 48px;
  }

  #nav .user-btn img {
    width: 48px;
    height: 48px;
    aspect-ratio: auto 48 / 48;
  }

  #nav .nav-language-selector {
    grid-column: 6/7;
    grid-row: 2/3;
    width: 36px;
    margin: auto;
  }

  #nav .account-options {
    width: 247px;
    left: unset;
    right: 20px;
    top: 76px;
    border-radius: 10px;
  }

  #nav .content.content-dropdown li.break {
    flex-basis: 100%;
    height: 0;
    padding: 0;
    margin: 0;
    width: 0;
  }

  #nav .content.content-dropdown li {
    margin: 0;
    padding: 10px 8px;
    width: 44%;
  }

  #nav .content li:hover {
    background-color: #EBE8FC;
    border-radius: 10px;
  }

  #nav .content li.break:hover {
    background-color: transparent;
  }

  #nav .content li:hover img {
    transform: rotate(15deg);
  }

  #nav .nav-meganav {
    background-color: #3C0040;
    grid-row: 4/5;
    grid-column: 1/8;
  }

  #nav .nav-meganav ul {
    padding-left: 25px;
    position: relative;
    left: 0;
    display: flex;
    height: 67px;
    align-items: center;
  }

  #nav .nav-meganav li:last-of-type {
    margin-right: 0;
  }

  #nav .nav-meganav > ul > li {
    border: none;
  }

  #nav .menu-item {
    width: auto;
    padding: 13px 16px;
    font-size: 16px;
    line-height: 19px;
    color: #FFFFFF;
  }

  #nav button.menu-item:hover,
  #nav .collapsible.active {
    border-radius: 16px;
    background-color: #FFFFFF;
    color: #000000;
  }

  #nav .collapsible::after {
    color: #FFFFFF;
    margin-left: 8px;
  }

  #nav .collapsible.active::after,
  #nav button.menu-item:hover::after {
    background-color: #FFFFFF;
    color: #000000;
    transform: translateY(3px);
  }

  #nav .collapsible + .content {
    position: absolute;
    left: 0;
    top: 100%;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    background-color: #FFFFFF;
    height: unset;
    width: 100%;
  }

  #nav .collapsible + .content ul {
    flex-direction: column;
    align-items: flex-start;
    padding: 20px 0 40px 20px;
    flex-wrap: wrap;
    height: 372px;
  }

  #nav .nav-featured-article {
    display: block;
    font-family: "Libre Franklin";
    max-width: 309px;
    padding: 20px 20px 40px 0;

  }

  #nav .article-title {
    display: block;
    margin-bottom: 16px;
    font-family: Raleway, sans-serif;
    font-size: 20px;
    line-height: 24px;
    color: #000000;
    font-weight: 700;
  }

  #nav .article-img {
    display: block;
    margin-bottom: 16px;
  }

  #nav .article-desc {
    font-weight: 400;
    font-size: 24px;
    color: #000000;
    margin-bottom: 24px;
  }

  #nav .content .article-url {
    display: flex;
    color: #7369AB;
    font-weight: 600;
    size: 15px;
    line-height: 18px;
  }

  #nav .article-url::after {
    content: '\2303';
    transform: rotate(90deg);
  }

  #nav .nav-language-selector [popover],
  #nav .nav-language-selector button[aria-haspopup] + [aria-hidden] {
    inset: unset;
    right: 42px;
    top: 74px;
  }

  #nav .nav-language-selector .region-name {
    margin-left: 12px;
  }

  #nav .nav-language-selector button .region-name {
    display: none;
  }
}

@media (min-width: 1200px) {
  #nav .collapsible + .content ul {
    padding: 40px 0 40px 48px;
  }

  #nav .content.content-dropdown li {
    width: 50%;
  }

  #nav .content.content-dropdown li.break {
    padding: 0 24px;
  }

  #nav .nav-featured-article {
    padding: 40px 48px 40px 0;
  }
}

